--- a/public/index.html
+++ b/public/index.html
@@ -229,6 +229,10 @@
 
 </table>
 
+<footer>
+    <a href="https://github.com/wyvernnot/hello_alauda">@wyvernnot/hello_alauda</a>
+</footer>
+
 
 </body>
 <script src="jquery-2.1.3.js"></script>
