--- a/public/index.html
+++ b/public/index.html
@@ -263,6 +263,7 @@
             $('.' + name).addClass('clickable').click(function () {
                 $.get('../' + name);
                 $("#component").text('\'s ' + name);
+                $(this).addClass('focus')
             })
         }
 
