--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
      作者: rachel_web
      源代码： http://codepen.io/rachel_web/pen/pjzowB
     -->
-    <h1>Hello Aluada<span id="component"></span></h1>
+    <h1>Hello Alauda<span id="component"></span></h1>
 
     <div class="minion">
         <ul class="hair back">
